--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
+  "name": "e2g-run-case-file-action",
+  "version": "0.0.1",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "Runs a case file against an EEC instance",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -10,12 +10,11 @@
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "npm run build && npm run format && npm run lint && npm run package"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/e2grnd/e2g-run-case-file-action.git"
   },
   "keywords": [
     "actions",
@@ -23,9 +22,13 @@
     "setup"
   ],
   "author": "",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@types/lodash.find": "^4.6.7",
+    "immutable": "^4.3.0",
+    "lodash.find": "^4.6.0",
+    "node-fetch": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
@@ -33,11 +36,9 @@
     "@vercel/ncc": "^0.36.1",
     "eslint": "^8.39.0",
     "eslint-plugin-github": "^4.7.0",
-    "eslint-plugin-jest": "^27.2.1",
-    "jest": "^29.5.0",
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
-    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
-  }
+  },
+  "packageManager": "yarn@3.6.0"
 }
