poormans conversion to protobuf RD-1318

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@actions/core": "^1.10.0",
     "@types/lodash.find": "^4.6.7",
     "immutable": "^4.3.0",
+    "lodash": "^4.17.21",
     "lodash.find": "^4.6.0",
     "node-fetch": "^3.3.1"
   },
