--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,11 @@
 {
   "plugins": [
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "eslint-plugin-jest"
   ],
   "extends": [
-    "plugin:github/recommended"
+    "plugin:github/recommended",
+    "plugin:eslint-plugin-jest/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -41,7 +43,6 @@
     ],
     "@typescript-eslint/no-array-constructor": "error",
     "@typescript-eslint/no-empty-interface": "error",
-    "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-extraneous-class": "error",
     "@typescript-eslint/no-for-in-array": "error",
     "@typescript-eslint/no-inferrable-types": "error",
@@ -69,8 +70,22 @@
     "no-shadow": "off",
     "@typescript-eslint/no-shadow": "error"
   },
+  "overrides": [
+    {
+      "files": [
+        "**/*{test,spec}.ts"
+      ],
+      "rules": {
+        "@typescript-eslint/no-unused-vars": "off",
+        "jest/no-standalone-expect": "off",
+        "jest/no-conditional-expect": "off",
+        "no-console": "off"
+      }
+    }
+  ],
   "env": {
     "node": true,
-    "es6": true
+    "es6": true,
+    "jest/globals": true
   }
 }
