--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
-    "all": "npm run build && npm run format && npm run lint && npm run package"
+    "test": "jest",
+    "all": "yarn test && yarn build && yarn format && yarn lint && yarn package"
   },
   "repository": {
     "type": "git",
@@ -25,20 +26,26 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@types/lodash.find": "^4.6.7",
     "immutable": "^4.3.0",
     "lodash": "^4.17.21",
     "lodash.find": "^4.6.0",
     "node-fetch": "^3.3.1"
   },
   "devDependencies": {
-    "@types/node": "^18.16.3",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@types/jest": "^29.5.2",
+    "@types/lodash.find": "^4.6.7",
+    "@types/node": "^18.16.19",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
     "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.39.0",
-    "eslint-plugin-github": "^4.7.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-github": "^4.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.2",
+    "jest": "^29.6.0",
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.0.4"
   },
   "packageManager": "yarn@3.6.0"
