--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@actions/core": "^1.10.0",
+    "@swc/core": "^1.3.68",
     "immutable": "^4.3.0",
     "lodash": "^4.17.21",
     "lodash.find": "^4.6.0",
