--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,6 +4,16 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
 
+supportedArchitectures:
+  os:
+    - darwin
+    - linux
+  cpu:
+    - x64
+    - arm64
+  libc:
+    - glibc
+
 preferAggregateCacheInfo: true
 
 yarnPath: .yarn/releases/yarn-3.6.0.cjs
